--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -172,11 +172,11 @@
     --orange-light: #412e20;
     --green: #379c4c;
     --green-light: #305538;
-    --blue: #473CE2;
+    --blue: #746ce4;
     --blue-light: #292f41;
     --red: #ac5353;
     --red-light: #573e3e;
-    --purple: #673ab7;
+    --purple: #a26eff;
     --purple-light: #d1c4e9;
 
     // IT-SERVICE
